--- a/docs/Coral_r_markdown.Rmd
+++ b/docs/Coral_r_markdown.Rmd
@@ -2,7 +2,9 @@
 title: "Palau's Coral Carbonate Production and Relation to Growth Potential"
 author: "Emily Buono"
 date: "7/17/2020"
-output: github_document
+output:
+  html_document:
+    df_print: paged
 bibliography: bibliography.bib
 ---
 
